# science-nlp

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  config.yaml  pyproject.toml  setup.py
.cache/nitpick/: merged-style.toml  styles.sqlite
notebooks/: fever-data.ipynb
slcs/: __init__.py  main.py
src/science_nlp/: main.py
