[tool.poetry]
name = "science-nlp"
version = "0.1.0"
description = ""
authors = ["Marc Wenzlawski <marc.wenzlawski@student.manchester.ac.uk>"]
readme = "README.md"
packages = [{include = "science_nlp"}]

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
wemake-python-styleguide = "^0.17.0"
mypy = "^0.991"
pre-commit = "^2.20.0"
nitpick = "^0.32.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style-wemake.toml"
